Update frontend and backend configuration

--- a/frontend/fill-form.html
+++ b/frontend/fill-form.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Redirecting...</title>
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
     <script>
         // Redirect to the correct location in /app/ folder
         // Preserves query parameters (like ?id=...)
