--- a/frontend/forms/index.html
+++ b/frontend/forms/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fill Form - EaseForm</title>
     <meta name="description" content="Submit your anonymous response - EaseForm">
-    <link rel="icon" type="image/png" href="../assets/logo.png">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
     <!-- Tailwind CSS -->
     <link href="/dist/output.css" rel="stylesheet">
 
