--- a/frontend/responses/index.html
+++ b/frontend/responses/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responses - EaseForm</title>
     <meta name="description" content="View and analyze form responses - EaseForm">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
 
     <!-- Tailwind CSS CDN -->
     <!-- Tailwind CSS -->
