--- a/frontend/auth/login.html
+++ b/frontend/auth/login.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="refresh" content="0; url=/login/">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
     <script>
         window.location.replace('/login/');
     </script>
