--- a/frontend/cors-test.html
+++ b/frontend/cors-test.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CORS Test</title>
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
     <style>
         body {
             font-family: system-ui, -apple-system, sans-serif;
