--- a/frontend/create/index.html
+++ b/frontend/create/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Form - EaseForm</title>
-    <link rel="icon" type="image/png" href="../assets/logo.png">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
     <meta name="description" content="Create a new form with EaseForm - Privacy-first form builder">
 
     <!-- Tailwind CSS CDN -->
