--- a/frontend/dashboard/index.html
+++ b/frontend/dashboard/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - EaseForm</title>
-    <link rel="icon" type="image/png" href="../assets/logo.png">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
     <meta name="description" content="Manage your forms - EaseForm Dashboard">
 
     <!-- Tailwind CSS CDN -->
