--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In - EaseForm</title>
-    <link rel="icon" type="image/png" href="../assets/logo.png">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
 
     <!-- Tailwind CSS CDN -->
     <!-- Tailwind CSS -->
@@ -66,63 +66,71 @@
             class="bg-slate-900/40 backdrop-blur-xl border border-white/10 rounded-2xl shadow-2xl shadow-indigo-500/10 p-8 md:p-10 transform transition-all hover:scale-[1.01] duration-500">
 
             <!-- EaseForm Branding -->
-            </a>
-        </div>
-        <p class="text-slate-400 font-medium text-center">Privacy-first form builder for hosts</p>
 
-        <!-- Error Message Display -->
-        <div id="errorMessage"
-            class="hidden mb-6 p-4 bg-red-500/10 border border-red-500/20 rounded-lg backdrop-blur-sm">
-            <p class="text-sm text-red-200 flex items-center">
-                <svg class="w-5 h-5 mr-2 text-red-400" fill="currentColor" viewBox="0 0 20 20">
-                    <path fill-rule="evenodd"
-                        d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
-                        clip-rule="evenodd" />
-                </svg>
-                <span id="errorText"></span>
-            </p>
-        </div>
-
-        <!-- Sign In Instructions -->
-        <div class="text-center mb-8">
-            <h2 class="text-xl font-semibold text-white mb-2">Welcome back</h2>
-            <p class="text-sm text-slate-400">Sign in to manage your forms</p>
-        </div>
-
-        <!-- Google Sign In Button -->
-        <button type="button" id="googleSignInButton"
-            class="w-full bg-white hover:bg-slate-50 text-slate-900 font-semibold py-4 px-6 rounded-xl transition-all duration-300 transform hover:scale-[1.02] active:scale-[0.98] shadow-lg hover:shadow-indigo-500/20 flex items-center justify-center group relative overflow-hidden">
-            <div
-                class="absolute inset-0 bg-gradient-to-r from-transparent via-slate-100/50 to-transparent translate-x-[-100%] group-hover:translate-x-[100%] transition-transform duration-1000">
+            <div class="text-center mb-10">
+                <a href="/" class="inline-flex items-center gap-1 group">
+                    <span
+                        class="text-3xl font-bold tracking-tight text-white group-hover:text-transparent group-hover:bg-clip-text group-hover:bg-gradient-to-r group-hover:from-teal-400 group-hover:to-blue-500 transition-all duration-300">Ease</span>
+                    <span
+                        class="text-3xl font-bold tracking-tight text-teal-400 group-hover:text-white transition-colors duration-300">Form</span>
+                    <div class="h-2 w-2 rounded-full bg-teal-400 mb-2 animate-pulse"></div>
+                </a>
+                <p class="text-slate-400 font-medium mt-3 text-sm">Privacy-first form builder for hosts</p>
             </div>
 
-            <svg class="w-6 h-6 mr-3 relative z-10" viewBox="0 0 24 24">
-                <path fill="#4285F4"
-                    d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
-                <path fill="#34A853"
-                    d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
-                <path fill="#FBBC05"
-                    d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
-                <path fill="#EA4335"
-                    d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
-            </svg>
-            <span class="text-base relative z-10">Sign in with Google</span>
-        </button>
+            <!-- Error Message Display -->
+            <div id="errorMessage"
+                class="hidden mb-6 p-4 bg-red-500/10 border border-red-500/20 rounded-lg backdrop-blur-sm">
+                <p class="text-sm text-red-200 flex items-center">
+                    <svg class="w-5 h-5 mr-2 text-red-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path fill-rule="evenodd"
+                            d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
+                            clip-rule="evenodd" />
+                    </svg>
+                    <span id="errorText"></span>
+                </p>
+            </div>
 
-        <!-- Privacy Note -->
-        <div class="mt-8 pt-6 border-t border-white/10">
-            <p class="text-xs text-slate-500 text-center">
-                By signing in, you agree to our Terms of Service.
-                We only use your Google account for authentication.
-            </p>
+            <!-- Sign In Instructions -->
+            <div class="text-center mb-8">
+                <h2 class="text-xl font-semibold text-white mb-2">Welcome back</h2>
+                <p class="text-sm text-slate-400">Sign in to manage your forms</p>
+            </div>
+
+            <!-- Google Sign In Button -->
+            <button type="button" id="googleSignInButton"
+                class="w-full bg-white hover:bg-slate-50 text-slate-900 font-semibold py-4 px-6 rounded-xl transition-all duration-300 transform hover:scale-[1.02] active:scale-[0.98] shadow-lg hover:shadow-indigo-500/20 flex items-center justify-center group relative overflow-hidden">
+                <div
+                    class="absolute inset-0 bg-gradient-to-r from-transparent via-slate-100/50 to-transparent translate-x-[-100%] group-hover:translate-x-[100%] transition-transform duration-1000">
+                </div>
+
+                <svg class="w-6 h-6 mr-3 relative z-10" viewBox="0 0 24 24">
+                    <path fill="#4285F4"
+                        d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+                    <path fill="#34A853"
+                        d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+                    <path fill="#FBBC05"
+                        d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+                    <path fill="#EA4335"
+                        d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+                </svg>
+                <span class="text-base relative z-10">Sign in with Google</span>
+            </button>
+
+            <!-- Privacy Note -->
+            <div class="mt-8 pt-6 border-t border-white/10">
+                <p class="text-xs text-slate-500 text-center">
+                    By signing in, you agree to our Terms of Service.
+                    We only use your Google account for authentication.
+                </p>
+            </div>
+
         </div>
 
-    </div>
-
-    <!-- Footer Note -->
-    <p class="text-center text-slate-500 text-sm mt-8">
-        Respondents don't need to sign in.
-    </p>
+        <!-- Footer Note -->
+        <p class="text-center text-slate-500 text-sm mt-8">
+            Respondents don't need to sign in.
+        </p>
 
     </div>
 
