--- a/frontend/forms/index.html
+++ b/frontend/forms/index.html
@@ -18,6 +18,18 @@
     <script src="../utils/logger.js"></script>
     <script src="../utils/cache.js"></script>
     <script src="../utils/auth.js"></script>
+
+    <!-- Auth Guard - Must run early -->
+    <script>
+        document.documentElement.style.display = 'none';
+    </script>
+    <script src="../utils/auth-guard.js"></script>
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+            if (window.AuthGuard) window.AuthGuard.init();
+        });
+        setTimeout(() => { document.documentElement.style.display = ''; }, 0);
+    </script>
     <script src="../utils/api.js"></script>
 
     <style>
