Praful Mohite login page update routing fixed

--- a/frontend/create/index.html
+++ b/frontend/create/index.html
@@ -419,22 +419,10 @@
         // ============================================
         async function initializeCreateForm() {
             try {
-                // Wait for session to load
-                var response = await supabaseClient.auth.getSession();
-                var session = response.data.session;
-                var error = response.error;
-
-                if (error) {
-                    window.Logger.error('Auth', 'Error checking session', error);
-                    window.location.href = '/login/';
-                    return;
-                }
-
-                // Check if session exists
-                if (!session) {
-                    window.Logger.info('Auth', 'No session found, redirecting');
-                    window.location.href = '/login/';
-                    return;
+                // Wait for AuthGuard to confirm authentication
+                if (window.AuthGuard) {
+                    const isAuthenticated = await window.AuthGuard.waitForAuth();
+                    if (!isAuthenticated) return;
                 }
 
                 // Session exists! User is authenticated
@@ -454,7 +442,7 @@
 
             } catch (error) {
                 window.Logger.error('Auth', 'Auth check failed', error);
-                window.location.href = '/login/';
+                // window.location.href = '/login/'; // AuthGuard handles this
             }
         }
 
