login page supabase init

--- a/frontend/dashboard/index.html
+++ b/frontend/dashboard/index.html
@@ -15,17 +15,12 @@
     <!-- Supabase JS Client CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-    <!-- App Configuration -->
-    <script src="../config.js?v=3"></script>
-
-    <!-- API Service -->
-    <script src="../utils/api.js?v=3"></script>
-
     <!-- Core Utilities -->
     <script src="../config.js"></script>
     <script src="../utils/logger.js"></script>
-    <script src="../utils/cache.js"></script>
+    <script src="../utils/supabase-client.js"></script>
     <script src="../utils/auth.js"></script>
+    <script src="../utils/cache.js"></script>
     <script src="../utils/api.js"></script>
 
     <!-- Auth Guard - Must run early -->
