--- a/frontend/forms/index.html
+++ b/frontend/forms/index.html
@@ -16,6 +16,7 @@
     <!-- Core Utilities -->
     <script src="../config.js"></script>
     <script src="../utils/logger.js"></script>
+    <script src="../utils/supabase-client.js"></script>
     <script src="../utils/cache.js"></script>
     <script src="../utils/auth.js"></script>
 
