--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,8 @@
     </script>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="config.js"></script>
+    <script src="utils/logger.js"></script>
+    <script src="utils/supabase-client.js"></script>
     <script src="landing-auth-helper.js"></script>
     <style>
         /* Custom subtle gradient animation */
