--- a/frontend/create/index.html
+++ b/frontend/create/index.html
@@ -18,6 +18,7 @@
     <!-- Core Utilities -->
     <script src="../config.js"></script>
     <script src="../utils/logger.js"></script>
+    <script src="../utils/supabase-client.js"></script>
     <script src="../utils/cache.js"></script>
     <script src="../utils/auth.js"></script>
     <script src="../utils/api.js"></script>
