update index page

--- a/frontend/create/index.html
+++ b/frontend/create/index.html
@@ -173,6 +173,10 @@
                         class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-lg hover:bg-gray-50 transition-colors">
                         Preview
                     </button>
+                    <button id="saveBtn"
+                        class="px-4 py-2 text-sm font-medium text-white bg-indigo-600 rounded-lg hover:bg-indigo-700 transition-colors">
+                        Save Form
+                    </button>
                     <a href="/dashboard/"
                         class="text-sm font-medium text-slate-600 hover:text-indigo-600 transition-colors">
                         Dashboard
